<resources>
    <string name="app_name">BoomShaKaLaKa</string>

    <!--MainActivity-->
    <string name="community">圈子</string>
    <string name="search">搜索</string>
    <string name="me">我</string>
    <string name="invite">邀请好友</string>
    <string name="invite_share">分享</string>
    <string name="invite_copy">复制</string>
    <string name="personal">个人中心</string>
    <string name="library">知识库</string>


    <!-- 知识库 -->
    <string name="information_center">资讯中心</string>
    <string name="information_widget_study">控件学习</string>

    <!-- DialogWidgetActivity -->
    <string name="action_settings">Settings</string>
    <string name="simple_dialog">基本对话框</string>
    <string name="simple_list_dialog">简单列表对话框</string>
    <string name="single_choice_dialog">单选项列表对话框</string>
    <string name="multi_choice_dialog">多选项列表对话框</string>
    <string name="custom_adapter_dialog">自定义Adapter对话框</string>
    <string name="custom_view_dialog">自定义View对话框</string>
    <string name="danli_dialog">单例对话框</string>
    <!-- 对话框所需要的字符串资源-->
    <string name="dialog_message">这里是内容区域</string>
    <string name="positive_button">确定</string>
    <string name="negative_button">取消</string>
    <!-- 对话框提示信息字符串资源-->
    <string name="toast_positive">你点击了确定按钮</string>
    <string name="toast_negative">你点击了取消按钮</string>
    <string name="text">自定义Adapter的内容</string>

    <!-- WheelViewDemoActivity-->
    <string name="activityWheelViewShow">show WheelView in Dialog!</string>

</resources>
