<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:tools="http://schemas.android.com/tools"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_simple_dialog"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_dialog"/>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_simple_list_dialog"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_list_dialog"/>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_single_choice_dialog"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_choice_dialog"/>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_multi_choice_dialog"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multi_choice_dialog"/>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_custom_adapter_dialog"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_adapter_dialog"/>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_custom_view_dialog"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_view_dialog"/>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_danli_dialog"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/danli_dialog"/>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/atv_show_danli_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="测试单例对话框选择的回调的显示"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        />

</LinearLayout>
