<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="@dimen/base60dp"
              android:background="@color/white"
              android:gravity="bottom"
              android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/light_gery"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/tab_community"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/community_selector"
            android:gravity="center"
            android:paddingTop="@dimen/blank_margin_8dp"
            android:text="@string/community"
            android:textColor="@color/theme_color"
            android:textSize="12sp"
            />

        <RadioButton
            android:id="@+id/tab_library"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/library_selector"
            android:gravity="center"
            android:paddingTop="@dimen/blank_margin_8dp"
            android:text="@string/library"
            android:textColor="@color/theme_color"
            android:textSize="12sp"/>

        <RadioButton
            android:id="@+id/tab_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/search_selector"
            android:gravity="center"
            android:paddingTop="@dimen/blank_margin_8dp"
            android:text="@string/search"
            android:textColor="@color/theme_color"
            android:textSize="12sp"/>

        <RadioButton
            android:id="@+id/tab_personal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/personal_selector"
            android:gravity="center"
            android:paddingTop="@dimen/blank_margin_8dp"
            android:text="@string/me"
            android:textColor="@color/theme_color"
            android:textSize="12sp"
            />

    </RadioGroup>

</LinearLayout>
